--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2",
